--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "2.0.2",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
     "lint:ci": "echo 'Skipping lint for CI/CD'",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
+    "@types/node": "^24.0.10",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
