feat: deploy on render updated .env

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
-VITE_API_URL=https://ai-restaurant-backend-production.up.railway.app
+# VITE_API_URL=https://ai-restaurant-backend-production.up.railway.app
+
+VITE_API_URL=https://ai-restaurant-backend.onrender.com/
 VITE_ENV_MODE=production
